Closed Bug 1355423 Opened 8 years ago Closed 8 years ago

Fix AtkRole and AXSubrole for ARIA treeitem

Categories

(Core :: Disability Access APIs, defect)

Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: jdiggs, Assigned: jdiggs)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

Steps to reproduce: 1. Load data:text/html,<div role="treeitem">foo</div> 2. Use Accerciser to examine the element Expected results: the element would be exposed with ROLE_TREE_ITEM Actual results: the element is exposed with ROLE_LIST_ITEM ROLE_TREE_ITEM was added to ATK in July 2011. Why this was not chosen as the treeitem mapping for Core AAM 1.0 back then, I could not tell you. It is the treeitem mapping for Core AAM 1.1: https://rawgit.com/w3c/aria/master/core-aam/core-aam.html#role-map-treeitem
Turns out the macOS AXSubrole is also in need of a correction.
Summary: ARIA treeitem role should be mapped as ATK_ROLE_TREE_ITEM; not ATK_ROLE_LIST_ITEM → Fix AtkRole and AXSubrole for ARIA treeitem
Attached patch proposed patchSplinter Review
I verified this fixes both the ATK role and the AXSubrole via manual testing and use of platform accessibility inspectors. Due to bug 1212026, I'm not sure how to provide a mochitest for this. And the ARIA treeitem role already has test coverage in accessible/tests/mochitest/role/test_aria.html.
Attachment #8878567 - Flags: review?(surkov.alexander)
Comment on attachment 8878567 [details] [diff] [review] proposed patch Review of attachment 8878567 [details] [diff] [review]: ----------------------------------------------------------------- looks good, thanks! yes, no tests coverage for this, there's no yet way to make it
Attachment #8878567 - Flags: review?(surkov.alexander) → review+
Assignee: nobody → jdiggs
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/b63a706320d9 Fix AtkRole and AXSubrole for ARIA treeitem. r=surkov
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: