Bug 1355423 - Fix AtkRole and AXSubrole for ARIA treeitem. r=surkov